--- a/w4/check_config_password.yaml
+++ b/w4/check_config_password.yaml
@@ -33,15 +33,15 @@
   - name: check config Password Authentication
     shell: cat /etc/ssh/sshd_config | grep "^Password Authentication no"
     register: config_password_authentication
-  - name: abc 
+  - name: Result check config Password Authentication
     debug:
-      msg: "abc"
+      msg: "Password Authentication is configured"
     when: config_password_authentication == password_authentication
 
   - name: check config PermitRootLogin
     shell: cat /etc/ssh/sshd_config | grep "^PermitRootLogin.*"
     register: config_permitrootlogin
-  - name: def
+  - name: Result check config PermitRootLogin
     debug:
-      msg: "def"
+      msg: "PermitRootLogin is configured"
     when: config_permitrootlogin == permit_root_login
