--- a/w4/check_config_timestamps.yaml
+++ b/w4/check_config_timestamps.yaml
@@ -5,7 +5,7 @@
     config.yaml
   tasks:
   - name: count file /var/log/users_history/
-    shell: ls /var/log/users_history/ | wc -l
+    shell: echo $(ls /var/log/users_history/ | wc -l)
     register: number_file
   - name: fff
     debug:
@@ -13,7 +13,7 @@
     when: number_file.stdout == 0
 
   - name: count file /var/log/sudo_history/
-    shell: ls /var/log/sudo_history/ | wc -l
+    shell: echo $(ls /var/log/sudo_history/ | wc -l)
     register: number_file2
   - name: fff
     debug:
