--- a/w4/check_config_password.yaml
+++ b/w4/check_config_password.yaml
@@ -4,39 +4,39 @@
   vars_files:
     - config.yaml
   tasks:
-  - name: check file /etc/pam.d/common_password if OS is Debian
-    shell: echo $(cat /etc/pam.d/common_password | grep "^password   requisite   pam_cracklib.so   try_first_pass   retry=3 minlength=12 lcredit=1 ucredit=1 dcredit=1 ocredit=1 difok=4" | xargs)
+  - name: check file /etc/pam.d/common-password if OS is Debian
+    shell: echo $(cat /etc/pam.d/common-password | grep "^password   requisite   pam_cracklib.so   try_first_pass   retry=3 minlength=12 lcredit=1 ucredit=1 dcredit=1 ocredit=1 difok=4" | xargs)
     register: common_password
     when: ansible_facts['os_family'] == "Debian"
   - name: if configuarated
     debug:
-      msg: "file /etc/pam.d/common_password is configuarated"
+      msg: "file /etc/pam.d/common-password is configuarated"
     when:
-      - common_password is defined 
+      - ansible_facts['os_family'] == "Debian"
       - common_password == common_password_debian
   - name: if not configuarated
     debug:
-      msg: "file /etc/pam.d/common_password isn't configuarated"
+      msg: "file /etc/pam.d/common-password isn't configuarated"
     when:
-      - common_password is defined
+      - ansible_facts['os_family'] == "Debian"
       - common_password != common_password_debian
 
-  - name: check file /etc/pam.d/system_auth  if OS is RedHat
-    shell: echo $(/etc/pam.d/system_auth | grep "^password    requisite     pam_cracklib.so try_first_pass retry=3" | xargs)
+  - name: check file /etc/pam.d/system-auth  if OS is RedHat
+    shell: echo $(cat /etc/pam.d/system-auth | grep "^password    requisite     pam_cracklib.so try_first_pass retry=3.*" | xargs)
     when: ansible_facts['os_family'] == "RedHat"
     register: system_auth
   - name: if configuarated
     debug:
-      msg: "file /etc/pam.d/system_auth is configuarated"
+      msg: "file /etc/pam.d/system-auth is configuarated"
     when:
-      - system_auth is defined 
-      - system_auth == system_auth_redhat
+      - ansible_facts['os_family'] == "RedHat"
+      - system_auth.stdout == system_auth_redhat
   - name: if not configuarated
     debug:
-      msg: "file /etc/pam.d/system_auth isn't configuarated"
+      msg: "file /etc/pam.d/system-auth isn't configuarated"
     when: 
-      - system_auth is defined 
-      - system_auth != system_auth_redhat
+      - ansible_facts['os_family'] == "RedHat"
+      - system_auth.stdout != system_auth_redhat
 
   - name: check config Password Authentication
     shell: cat /etc/ssh/sshd_config | grep "^Password Authentication no"
