--- a/w4/check_config_password.yaml
+++ b/w4/check_config_password.yaml
@@ -44,7 +44,11 @@
   - name: Result check config Password Authentication
     debug:
       msg: "Password Authentication is configured"
-    when: config_password_authentication == password_authentication
+    when: config_password_authentication.stdout == password_authentication
+  - name: Result check config Password Authentication
+    debug:
+      msg: "Password Authentication isn't configured"
+    when: config_password_authentication.stdout != password_authentication
 
   - name: check config PermitRootLogin
     shell: cat /etc/ssh/sshd_config | grep "^PermitRootLogin.*"
@@ -52,4 +56,8 @@
   - name: Result check config PermitRootLogin
     debug:
       msg: "PermitRootLogin is configured"
-    when: config_permitrootlogin == permit_root_login
+    when: config_permitrootlogin.stdout == permit_root_login
+  - name: Result check config PermitRootLogin
+    debug:
+      msg: "PermitRootLogin isn't configured"
+    when: config_permitrootlogin.stdout != permit_root_login
