--- a/w4/check_config_nginx.yaml
+++ b/w4/check_config_nginx.yaml
@@ -5,13 +5,13 @@
   - name: Get package information
     package_facts:
       manager: "auto"
-  - name: Check Apache is installed or not
+  - name: Check Nginx is installed or not
     debug:
       msg: "Apache is installed"
     when: "'nginx' in ansible_facts.packages"
 
   - name: Check X-XSS-Protection
-    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set X-XSS-Protection.*")
+    shell: echo $(cat /etc/nginx/sites-available/default | grep "^add_header X-XSS-Protection.*")
     register: check_x_xss_protection_nginx
   - name: Result X-XSS-Protection
     debug:
@@ -23,7 +23,7 @@
     when: check_x_xss_protection_nginx != x_xss_protection_nginx
 
   - name: Check HTTP Strict Transport Security
-    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header     set    Strict-Transport-Securityhttp_strict_transport_security.*")
+    shell: echo $(cat /etc/nginx/sites-available/default | grep "^add_header Strict-Transport-Security.*")
     register: check_http_strict_transport_security_nginx
   - name: Result HTTP Strict Transport Security
     debug:
@@ -35,7 +35,7 @@
     when: check_http_strict_transport_security_nginx != http_strict_transport_security_nginx
 
   - name: Check X-Frame-Options
-    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header always append X-Frame-Options DENY.*")
+    shell: echo $(cat /etc/nginx/sites-available/default | grep "^add_header X-Frame-Options.*")
     register: check_x_frame_options_nginx
   - name: Result X-Frame-Options
     debug:
@@ -47,7 +47,7 @@
     when: check_x_frame_options_nginx != x_frame_options_nginx
 
   - name: Check X-Content-Type-Options
-    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set X-Content-Type-Options nosniff")
+    shell: echo $(cat /etc/nginx/sites-available/default | grep "^add_header X-Content-Type-Options.*")
     register: check_x_content_type_options_nginx
   - name: Result X-Content-Type-Options
     debug:
@@ -59,7 +59,7 @@
     when: check_x_content_type_options_nginx != x_content_type_options_nginx
 
   - name: Check Content Security Policy
-    shell: echo $(cat /etc/apache2/apache2.conf | grep "^Header set Content-Security-Policy.*")
+    shell: echo $(cat /etc/nginx/sites-available/default | grep "^add_header Content-Security-Policy.*")
     register: check_content_security_policy_nginx
   - name: Result Content Security Policy
     debug:
