--- a/w4/check_config_timestamps.yaml
+++ b/w4/check_config_timestamps.yaml
@@ -39,18 +39,9 @@
     when: check_exist2.stdout == ""
   - name: count file /var/log/sudo_history/ if exist
     shell: echo $(ls /var/log/sudo_history/ | wc -l)
-    register: number_file
+    register: number_file2
     when: check_exist2.stdout != ""
   - name: Result
     debug:
       msg: "Configured timestamps for root user"
     when: number_file2.stdout > 0
-  - name: Count number login
-    shell: echo $(last | wc -l)
-    register: number_login
-  - name: Result
-    debug:
-      msg: "Not configured timestamps for normal user yet"
-    when: 
-      - number_file.stdout == 0
-      - number_login > 0
