--- a/w2/install/docker/install.yaml
+++ b/w2/install/docker/install.yaml
@@ -49,3 +49,9 @@
       name: docker
       state: started
       enabled: yes
+
+  - name: Install docker-compose from official github repo
+    get_url:
+      url : https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
+      dest: /usr/local/bin/docker-compose
+      mode: 'u+x,g+x'
